grammar/Aluminum/AluminumParser.cpp

// Generated from /home/alex/Programming/CMSC838E/Aluminum/grammar/Aluminum.g4 by ANTLR 4.12.0


#include "AluminumListener.h"
#include "AluminumVisitor.h"

#include "AluminumParser.h"


using namespace antlrcpp;
using namespace Aluminum;

using namespace antlr4;

namespace {

struct AluminumParserStaticData final {
  AluminumParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  AluminumParserStaticData(const AluminumParserStaticData&) = delete;
  AluminumParserStaticData(AluminumParserStaticData&&) = delete;
  AluminumParserStaticData& operator=(const AluminumParserStaticData&) = delete;
  AluminumParserStaticData& operator=(AluminumParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag aluminumParserOnceFlag;
AluminumParserStaticData *aluminumParserStaticData = nullptr;

void aluminumParserInitialize() {
  assert(aluminumParserStaticData == nullptr);
  auto staticData = std::make_unique<AluminumParserStaticData>(
    std::vector<std::string>{
      "program", "function", "function_header", "function_identifier", "function_variables", 
      "block", "statement", "if_block", "else_block", "while_block", "declare_op", 
      "set_op", "expression", "arith_op", "comp_op", "function_call", "value", 
      "literal_val", "var_val", "type", "default_type", "custom_type"
    },
    std::vector<std::string>{
      "", "'cust'", "'('", "')'", "';'", "'{'", "'}'", "'->'", "'.'", "','", 
      "'>='", "'>'", "'<='", "'<'", "'='", "'take'", "'set'", "'main'", 
      "'if'", "'else'", "'while'", "'def'", "'func'", "'var'", "'int'", 
      "", "'*'", "'/'", "'+'", "'-'"
    },
    std::vector<std::string>{
      "", "", "LPAREN", "RPAREN", "EOL", "LCURL", "RCURL", "ARROW", "DOR", 
      "COMMA", "GREATEREQUAL", "GREATER", "LESSEQUAL", "LESS", "EQUALS", 
      "TAKE", "SET", "MAIN", "IF", "ELSE", "WHILE", "DEFINE", "FUNCTION", 
      "VARIABLE", "INT", "IDENTIFIER", "MUL", "DIV", "ADD", "SUB", "INT_LITERAL", 
      "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  aluminumParserStaticData = staticData.release();
}

}

AluminumParser::AluminumParser(TokenStream *input) : AluminumParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

AluminumParser::AluminumParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  AluminumParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *aluminumParserStaticData->atn, aluminumParserStaticData->decisionToDFA, aluminumParserStaticData->sharedContextCache, options);
}

AluminumParser::~AluminumParser() {
  delete _interpreter;
}

const atn::ATN& AluminumParser::getATN() const {
  return *aluminumParserStaticData->atn;
}

std::string AluminumParser::getGrammarFileName() const {
  return "Aluminum.g4";
}

const std::vector<std::string>& AluminumParser::getRuleNames() const {
  return aluminumParserStaticData->ruleNames;
}

const dfa::Vocabulary& AluminumParser::getVocabulary() const {
  return aluminumParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView AluminumParser::getSerializedATN() const {
  return aluminumParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

AluminumParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AluminumParser::ProgramContext::EOF() {
  return getToken(AluminumParser::EOF, 0);
}

std::vector<AluminumParser::FunctionContext *> AluminumParser::ProgramContext::function() {
  return getRuleContexts<AluminumParser::FunctionContext>();
}

AluminumParser::FunctionContext* AluminumParser::ProgramContext::function(size_t i) {
  return getRuleContext<AluminumParser::FunctionContext>(i);
}


size_t AluminumParser::ProgramContext::getRuleIndex() const {
  return AluminumParser::RuleProgram;
}

void AluminumParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void AluminumParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any AluminumParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AluminumVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

AluminumParser::ProgramContext* AluminumParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, AluminumParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(44);
      function();
      setState(47); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == AluminumParser::DEFINE);
    setState(49);
    match(AluminumParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

AluminumParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AluminumParser::Function_headerContext* AluminumParser::FunctionContext::function_header() {
  return getRuleContext<AluminumParser::Function_headerContext>(0);
}

AluminumParser::BlockContext* AluminumParser::FunctionContext::block() {
  return getRuleContext<AluminumParser::BlockContext>(0);
}


size_t AluminumParser::FunctionContext::getRuleIndex() const {
  return AluminumParser::RuleFunction;
}

void AluminumParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void AluminumParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}


std::any AluminumParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AluminumVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

AluminumParser::FunctionContext* AluminumParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 2, AluminumParser::RuleFunction);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    function_header();
    setState(52);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_headerContext ------------------------------------------------------------------

AluminumParser::Function_headerContext::Function_headerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AluminumParser::Function_headerContext::DEFINE() {
  return getToken(AluminumParser::DEFINE, 0);
}

tree::TerminalNode* AluminumParser::Function_headerContext::FUNCTION() {
  return getToken(AluminumParser::FUNCTION, 0);
}

AluminumParser::Function_identifierContext* AluminumParser::Function_headerContext::function_identifier() {
  return getRuleContext<AluminumParser::Function_identifierContext>(0);
}

tree::TerminalNode* AluminumParser::Function_headerContext::LPAREN() {
  return getToken(AluminumParser::LPAREN, 0);
}

tree::TerminalNode* AluminumParser::Function_headerContext::RPAREN() {
  return getToken(AluminumParser::RPAREN, 0);
}

AluminumParser::Function_variablesContext* AluminumParser::Function_headerContext::function_variables() {
  return getRuleContext<AluminumParser::Function_variablesContext>(0);
}

tree::TerminalNode* AluminumParser::Function_headerContext::ARROW() {
  return getToken(AluminumParser::ARROW, 0);
}

AluminumParser::TypeContext* AluminumParser::Function_headerContext::type() {
  return getRuleContext<AluminumParser::TypeContext>(0);
}


size_t AluminumParser::Function_headerContext::getRuleIndex() const {
  return AluminumParser::RuleFunction_header;
}

void AluminumParser::Function_headerContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_header(this);
}

void AluminumParser::Function_headerContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_header(this);
}


std::any AluminumParser::Function_headerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AluminumVisitor*>(visitor))
    return parserVisitor->visitFunction_header(this);
  else
    return visitor->visitChildren(this);
}

AluminumParser::Function_headerContext* AluminumParser::function_header() {
  Function_headerContext *_localctx = _tracker.createInstance<Function_headerContext>(_ctx, getState());
  enterRule(_localctx, 4, AluminumParser::RuleFunction_header);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(AluminumParser::DEFINE);
    setState(55);
    match(AluminumParser::FUNCTION);
    setState(56);
    function_identifier();
    setState(57);
    match(AluminumParser::LPAREN);
    setState(59);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == AluminumParser::T__0

    || _la == AluminumParser::INT) {
      setState(58);
      function_variables();
    }
    setState(61);
    match(AluminumParser::RPAREN);
    setState(64);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == AluminumParser::ARROW) {
      setState(62);
      match(AluminumParser::ARROW);
      setState(63);
      type();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_identifierContext ------------------------------------------------------------------

AluminumParser::Function_identifierContext::Function_identifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AluminumParser::Function_identifierContext::MAIN() {
  return getToken(AluminumParser::MAIN, 0);
}

tree::TerminalNode* AluminumParser::Function_identifierContext::IDENTIFIER() {
  return getToken(AluminumParser::IDENTIFIER, 0);
}


size_t AluminumParser::Function_identifierContext::getRuleIndex() const {
  return AluminumParser::RuleFunction_identifier;
}

void AluminumParser::Function_identifierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_identifier(this);
}

void AluminumParser::Function_identifierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_identifier(this);
}


std::any AluminumParser::Function_identifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AluminumVisitor*>(visitor))
    return parserVisitor->visitFunction_identifier(this);
  else
    return visitor->visitChildren(this);
}

AluminumParser::Function_identifierContext* AluminumParser::function_identifier() {
  Function_identifierContext *_localctx = _tracker.createInstance<Function_identifierContext>(_ctx, getState());
  enterRule(_localctx, 6, AluminumParser::RuleFunction_identifier);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    _la = _input->LA(1);
    if (!(_la == AluminumParser::MAIN

    || _la == AluminumParser::IDENTIFIER)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_variablesContext ------------------------------------------------------------------

AluminumParser::Function_variablesContext::Function_variablesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AluminumParser::TypeContext *> AluminumParser::Function_variablesContext::type() {
  return getRuleContexts<AluminumParser::TypeContext>();
}

AluminumParser::TypeContext* AluminumParser::Function_variablesContext::type(size_t i) {
  return getRuleContext<AluminumParser::TypeContext>(i);
}

std::vector<tree::TerminalNode *> AluminumParser::Function_variablesContext::IDENTIFIER() {
  return getTokens(AluminumParser::IDENTIFIER);
}

tree::TerminalNode* AluminumParser::Function_variablesContext::IDENTIFIER(size_t i) {
  return getToken(AluminumParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> AluminumParser::Function_variablesContext::COMMA() {
  return getTokens(AluminumParser::COMMA);
}

tree::TerminalNode* AluminumParser::Function_variablesContext::COMMA(size_t i) {
  return getToken(AluminumParser::COMMA, i);
}


size_t AluminumParser::Function_variablesContext::getRuleIndex() const {
  return AluminumParser::RuleFunction_variables;
}

void AluminumParser::Function_variablesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_variables(this);
}

void AluminumParser::Function_variablesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_variables(this);
}


std::any AluminumParser::Function_variablesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AluminumVisitor*>(visitor))
    return parserVisitor->visitFunction_variables(this);
  else
    return visitor->visitChildren(this);
}

AluminumParser::Function_variablesContext* AluminumParser::function_variables() {
  Function_variablesContext *_localctx = _tracker.createInstance<Function_variablesContext>(_ctx, getState());
  enterRule(_localctx, 8, AluminumParser::RuleFunction_variables);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    type();
    setState(69);
    match(AluminumParser::IDENTIFIER);
    setState(76);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AluminumParser::COMMA) {
      setState(70);
      match(AluminumParser::COMMA);
      setState(71);
      type();
      setState(72);
      match(AluminumParser::IDENTIFIER);
      setState(78);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

AluminumParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AluminumParser::BlockContext::LCURL() {
  return getToken(AluminumParser::LCURL, 0);
}

tree::TerminalNode* AluminumParser::BlockContext::RCURL() {
  return getToken(AluminumParser::RCURL, 0);
}

std::vector<AluminumParser::StatementContext *> AluminumParser::BlockContext::statement() {
  return getRuleContexts<AluminumParser::StatementContext>();
}

AluminumParser::StatementContext* AluminumParser::BlockContext::statement(size_t i) {
  return getRuleContext<AluminumParser::StatementContext>(i);
}


size_t AluminumParser::BlockContext::getRuleIndex() const {
  return AluminumParser::RuleBlock;
}

void AluminumParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void AluminumParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any AluminumParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AluminumVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

AluminumParser::BlockContext* AluminumParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 10, AluminumParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(AluminumParser::LCURL);
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1108705284) != 0)) {
      setState(80);
      statement();
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(86);
    match(AluminumParser::RCURL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

AluminumParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AluminumParser::Declare_opContext* AluminumParser::StatementContext::declare_op() {
  return getRuleContext<AluminumParser::Declare_opContext>(0);
}

tree::TerminalNode* AluminumParser::StatementContext::EOL() {
  return getToken(AluminumParser::EOL, 0);
}

AluminumParser::Set_opContext* AluminumParser::StatementContext::set_op() {
  return getRuleContext<AluminumParser::Set_opContext>(0);
}

AluminumParser::ExpressionContext* AluminumParser::StatementContext::expression() {
  return getRuleContext<AluminumParser::ExpressionContext>(0);
}

AluminumParser::If_blockContext* AluminumParser::StatementContext::if_block() {
  return getRuleContext<AluminumParser::If_blockContext>(0);
}

AluminumParser::While_blockContext* AluminumParser::StatementContext::while_block() {
  return getRuleContext<AluminumParser::While_blockContext>(0);
}


size_t AluminumParser::StatementContext::getRuleIndex() const {
  return AluminumParser::RuleStatement;
}

void AluminumParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void AluminumParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any AluminumParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AluminumVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

AluminumParser::StatementContext* AluminumParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 12, AluminumParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(99);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case AluminumParser::TAKE: {
        enterOuterAlt(_localctx, 1);
        setState(88);
        declare_op();
        setState(89);
        match(AluminumParser::EOL);
        break;
      }

      case AluminumParser::SET: {
        enterOuterAlt(_localctx, 2);
        setState(91);
        set_op();
        setState(92);
        match(AluminumParser::EOL);
        break;
      }

      case AluminumParser::LPAREN:
      case AluminumParser::IDENTIFIER:
      case AluminumParser::INT_LITERAL: {
        enterOuterAlt(_localctx, 3);
        setState(94);
        expression(0);
        setState(95);
        match(AluminumParser::EOL);
        break;
      }

      case AluminumParser::IF: {
        enterOuterAlt(_localctx, 4);
        setState(97);
        if_block();
        break;
      }

      case AluminumParser::WHILE: {
        enterOuterAlt(_localctx, 5);
        setState(98);
        while_block();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_blockContext ------------------------------------------------------------------

AluminumParser::If_blockContext::If_blockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AluminumParser::If_blockContext::IF() {
  return getToken(AluminumParser::IF, 0);
}

tree::TerminalNode* AluminumParser::If_blockContext::LPAREN() {
  return getToken(AluminumParser::LPAREN, 0);
}

AluminumParser::ExpressionContext* AluminumParser::If_blockContext::expression() {
  return getRuleContext<AluminumParser::ExpressionContext>(0);
}

tree::TerminalNode* AluminumParser::If_blockContext::RPAREN() {
  return getToken(AluminumParser::RPAREN, 0);
}

AluminumParser::BlockContext* AluminumParser::If_blockContext::block() {
  return getRuleContext<AluminumParser::BlockContext>(0);
}

AluminumParser::Else_blockContext* AluminumParser::If_blockContext::else_block() {
  return getRuleContext<AluminumParser::Else_blockContext>(0);
}


size_t AluminumParser::If_blockContext::getRuleIndex() const {
  return AluminumParser::RuleIf_block;
}

void AluminumParser::If_blockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_block(this);
}

void AluminumParser::If_blockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_block(this);
}


std::any AluminumParser::If_blockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AluminumVisitor*>(visitor))
    return parserVisitor->visitIf_block(this);
  else
    return visitor->visitChildren(this);
}

AluminumParser::If_blockContext* AluminumParser::if_block() {
  If_blockContext *_localctx = _tracker.createInstance<If_blockContext>(_ctx, getState());
  enterRule(_localctx, 14, AluminumParser::RuleIf_block);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(AluminumParser::IF);
    setState(102);
    match(AluminumParser::LPAREN);
    setState(103);
    expression(0);
    setState(104);
    match(AluminumParser::RPAREN);
    setState(105);
    block();
    setState(107);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == AluminumParser::ELSE) {
      setState(106);
      else_block();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Else_blockContext ------------------------------------------------------------------

AluminumParser::Else_blockContext::Else_blockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AluminumParser::Else_blockContext::ELSE() {
  return getToken(AluminumParser::ELSE, 0);
}

AluminumParser::If_blockContext* AluminumParser::Else_blockContext::if_block() {
  return getRuleContext<AluminumParser::If_blockContext>(0);
}

AluminumParser::BlockContext* AluminumParser::Else_blockContext::block() {
  return getRuleContext<AluminumParser::BlockContext>(0);
}


size_t AluminumParser::Else_blockContext::getRuleIndex() const {
  return AluminumParser::RuleElse_block;
}

void AluminumParser::Else_blockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElse_block(this);
}

void AluminumParser::Else_blockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElse_block(this);
}


std::any AluminumParser::Else_blockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AluminumVisitor*>(visitor))
    return parserVisitor->visitElse_block(this);
  else
    return visitor->visitChildren(this);
}

AluminumParser::Else_blockContext* AluminumParser::else_block() {
  Else_blockContext *_localctx = _tracker.createInstance<Else_blockContext>(_ctx, getState());
  enterRule(_localctx, 16, AluminumParser::RuleElse_block);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(AluminumParser::ELSE);
    setState(112);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case AluminumParser::IF: {
        setState(110);
        if_block();
        break;
      }

      case AluminumParser::LCURL: {
        setState(111);
        block();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- While_blockContext ------------------------------------------------------------------

AluminumParser::While_blockContext::While_blockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AluminumParser::While_blockContext::WHILE() {
  return getToken(AluminumParser::WHILE, 0);
}

tree::TerminalNode* AluminumParser::While_blockContext::LPAREN() {
  return getToken(AluminumParser::LPAREN, 0);
}

AluminumParser::ExpressionContext* AluminumParser::While_blockContext::expression() {
  return getRuleContext<AluminumParser::ExpressionContext>(0);
}

tree::TerminalNode* AluminumParser::While_blockContext::RPAREN() {
  return getToken(AluminumParser::RPAREN, 0);
}

AluminumParser::BlockContext* AluminumParser::While_blockContext::block() {
  return getRuleContext<AluminumParser::BlockContext>(0);
}


size_t AluminumParser::While_blockContext::getRuleIndex() const {
  return AluminumParser::RuleWhile_block;
}

void AluminumParser::While_blockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhile_block(this);
}

void AluminumParser::While_blockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AluminumListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhile_block(this);
}


std::any AluminumParser::While_blockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AluminumVisitor*>(visitor))
    return parserVisitor->visitWhile_block(this);
  else
    return visitor->visitChildren(this);
}

AluminumParser::While_blockContext* AluminumParser::while_block() {
  While_blockContext *_localctx = _tracker.createInstance<While_blockContext>(_ctx, getState());
  enterRule(_localctx, 18, AluminumParser::RuleWhile_block);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(AluminumParser::WHILE);
    setState(115);
    match(AluminumParser::LPAREN);
    setState(116);
    expression(0);
    setState(117);
    match(AluminumParser::RPAREN);
    setState(118);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
